fixed z-index

--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ body{
   height: 100vh;
   background: #323d44
   no-repeat center;
-  z-index: 9999;
+  z-index: 999999;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -892,7 +892,7 @@ background: #003650;
   height: 100vh;
   background: rgba(45, 40, 73, 0.5);
   position: fixed;
-  z-index: 999999;
+  z-index: 99999;
   display: flex;
   justify-content: center;
   align-items: center;
